Adding home screen with navbar and footer component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="description" content="" />
 
-    <title> TechnologyCreators - Elektryka i Spawalnictwo </title>
+    <title> TechCreators - Elektryka i Spawalnictwo </title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
